# otelexample

./: common_utils.hpp  exporter_utils.hpp  foo_library.cc  foo_library.h  main.cpp  meson.build  otelapi.hpp  otelmetricexporter.hpp  prometheusexporter.hpp
http/: http_client.hpp  http_subscriber.hpp
logger/: logger.hpp
subprojects/: prometheus.wrap  reactor.wrap
